Update Test Template to Enable or Disable Jolokia in Cassandra